[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
chrono = "0.4.34"
